--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div id="intro" class="row text-center">
               <h1>Coding Quiz Challenge</h1>
               <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds.</p>
-              <div class="col-12"><button type="button" class="btn btn-primary btn-lg">Start Quiz</button></div>
+              <div class="col-12"><button type="button" class="btn btn-primary btn-lg start">Start Quiz</button></div>
           </div>
       </main>
     </div>
