added score page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
       <header class="row">
         <div class="col-10">
-          <p><a href=".highscores.html">View high scores</a></p>
+          <p><a href="highscores.html">View high scores</a></p>
         </div>
         <div class="col">
           <p id="time-left" class=""></p>
@@ -29,8 +29,21 @@
               <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds.</p>
               <div class="col-12"><button type="button" class="btn btn-primary btn-lg start">Start Quiz</button></div>
           </div>
+<!--           <div id="initials" class="row" style="display:none">
+            <div class="feed">
+             <input type="text" name="initials" value=""  size="50">
+            </div>
+          </div> -->
       </main>
+<!--       <div class="row">
+        <div class="col">
+      <div id="end-score" class="hide">
+        <p>Enter initials: <input type="text" id="initials">
+          <button type="button" class="btn btn-primary btn-lg " id="submit" placeholder="Enter initial here">Submit</button></p>
+          
+        </div>
     </div>
+    </div> -->
 
     <script src="./assets/js/script.js"></script>
   </body>
