--- a/highscores.html
+++ b/highscores.html
@@ -14,6 +14,12 @@
     />
 </head>
 <body>
-    
+  <div class="wrapper">
+    <h1>Highscores</h1>
+    <ol id="highscores"></ol>
+    <a href="index.html"><button type="button" class="btn btn-primary btn-lg start">Go Back</button></a>
+    <button type="button" class="btn btn-primary btn-lg start" id="clear">Clear Highscores</button>
+  </div>
+  <script src="./assets/js/scores.js"></script>
 </body>
 </html>
