--- a/highscores.html
+++ b/highscores.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>High Scores</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link
@@ -12,14 +12,22 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-</head>
-<body>
-  <div class="wrapper">
-    <h1>Highscores</h1>
-    <ol id="highscores"></ol>
-    <a href="index.html"><button type="button" class="btn btn-primary btn-lg start">Go Back</button></a>
-    <button type="button" class="btn btn-primary btn-lg start" id="clear">Clear Highscores</button>
-  </div>
-  <script src="./assets/js/scores.js"></script>
-</body>
+  </head>
+  <body>
+    <div class="row wrapper">
+      <div class="col">
+      <h1>Highscores</h1>
+      <ol id="highscores"></ol>
+      <a href="index.html"
+        ><button type="button" class="btn btn-primary btn-lg start">
+          Go Back
+        </button></a
+      >
+      <button type="button" class="btn btn-primary btn-lg start" id="clear">
+        Clear Highscores
+      </button>
+    </div>
+    </div>
+    <script src="./assets/js/scores.js"></script>
+  </body>
 </html>
